feat: Rewrite evidence Phase 2 with mouse-grab panning, minimal color scheme, and request/status lines
- Phase 2 now opens as a proper JFrame (minimize/maximize/close) instead of reusing the modal JDialog
- Added Pan mode (default) with mouse-grab to drag the image around the canvas
- Annotation tools (Box, Arrow, Highlight, Redact) draw in image-space coordinates independent of pan offset
- Request text now includes the first line (e.g. GET /api/v1/users HTTP/1.1)
- Response text now includes the status line (e.g. HTTP/1.1 200 OK)
- Replaced Dracula palette with a minimal neutral dark scheme (#181818 background)
- Added status code coloring: 2xx green, 3xx blue, 4xx orange, 5xx red
- Added JSON syntax highlighting: keys dim gray, strings muted green, numbers/booleans muted blue
- Renamed context menu item from "CREATE EVIDENCE" to "Create Evidence"

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>